Added possibility to add markers to CSV files like GPR